--- a/CombinadoresSeletoresFilhoDireto/index.html
+++ b/CombinadoresSeletoresFilhoDireto/index.html
@@ -6,14 +6,13 @@
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
     <style>
 
-        form ~ input {
+        form > input {
             border: red 2px solid;
         }
         
     </style>
 </head>
 <body>
-    <input type="text" placeholder= "endereço " />
     <form>
         <input type="text" placeholder="Nome" />
         <label for="email">
@@ -21,9 +20,7 @@
         </label>
     </form>
 
-    <input type="text" placeholder= "Email " />
-    <input type="text" placeholder= "Confirme " />
-    <input type="text" placeholder= "Confirme " />
+    <input type="text" placeholder= "Email " id="senha" />
         
 </body>
 </html>
