--- a/CombinadoresSeletoresDescendente/index.html
+++ b/CombinadoresSeletoresDescendente/index.html
@@ -6,7 +6,7 @@
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
     <style>
 
-        form > input {
+        form input {
             border: red 2px solid;
         }
         
