--- a/CombinadoresSeletoresIrmaoAdjacente/index.html
+++ b/CombinadoresSeletoresIrmaoAdjacente/index.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
 <html>
 <head>
-    <title>Page Title</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
     <style>
 
-        form ~ input {
+        form + input {
             border: red 2px solid;
         }
         
