Update Display inline

--- a/display/index.html
+++ b/display/index.html
@@ -20,9 +20,12 @@
         <h2>Display: inline</h2>
         <div class="inline">
         </div>
-        <span class="inline">Hcode</span>
-        <span class="inline">Hcode</span>
-        <span class="inline">Hcode</span>
+        <span class="inline A">Hcodeasdasda sddasasd</span>
+        <span class="inline B">Hcod easddasasddasads</span>
+        <span class="inline F">Hcodeasd dddddddddddddddddddddd</span>
+        <span class="inline E">Hcodeasdd dddddddddd ddddddddddd</span>
+        <span class="inline D">Hco deasdd dddddddd dddddddd ddddd</span>
+        <span class="inline C">Hcode asdddddddd dddddddddd ddddd</span>
     </div>
     <div class="container">
         <h2>Display: inline-block</h2>
